--- a/index.html
+++ b/index.html
@@ -7,274 +7,26 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <!-- Tela de abertura -->
   <div id="splash-screen" ontouchstart="handleTouchStart(event)" ontouchmove="handleTouchMove(event)">
     <img src="logo.png" alt="Louco Burguer" id="logo-float" />
     <p class="slogan">Arrasta pra cima e mata sua fome!</p>
   </div>
 
-  <!-- Conteúdo principal -->
   <div id="main-content" class="hidden">
     <header>
       <img src="logo.png" alt="Louco Burguer" class="logo-small" />
       <nav>
-        <button onclick="showTab('cardapio')">Cardápio</button>
-        <button onclick="showTab('clones')">Clones</button>
-        <button onclick="showTab('bebidas')">Sucos e Bebidas</button>
+        <button data-tab="cardapio" class="active">Cardápio</button>
+        <button data-tab="clones">Clones</button>
+        <button data-tab="bebidas">Sucos e Bebidas</button>
       </nav>
     </header>
 
     <section id="promo-banner"></section>
 
-    <section id="cardapio" class="tab grid-tab">
-<div class="item">
-      <img src="hamburguer.png" alt="Hambúrguer">
-      <h2>X-Burguer</h2>
-      <p>Pão brioche, carne, queijo, alface, tomate, molho especial.</p>
-      <span>R$ 24,90</span>
-    </div>
-<div class="item">
-      <img src="hamburguer.png" alt="Hambúrguer">
-      <h2>X-Burguer</h2>
-      <p>Pão brioche, carne, queijo, alface, tomate, molho especial.</p>
-      <span>R$ 24,90</span>
-    </div>
-<div class="item">
-      <img src="hamburguer.png" alt="Hambúrguer">
-      <h2>X-Burguer</h2>
-      <p>Pão brioche, carne, queijo, alface, tomate, molho especial.</p>
-      <span>R$ 24,90</span>
-    </div>
-<div class="item">
-      <img src="hamburguer.png" alt="Hambúrguer">
-      <h2>X-Burguer</h2>
-      <p>Pão brioche, carne, queijo, alface, tomate, molho especial.</p>
-      <span>R$ 24,90</span>
-    </div>
-<div class="item">
-      <img src="hamburguer.png" alt="Hambúrguer">
-      <h2>X-Burguer</h2>
-      <p>Pão brioche, carne, queijo, alface, tomate, molho especial.</p>
-      <span>R$ 24,90</span>
-    </div>
-<div class="item">
-      <img src="hamburguer.png" alt="Hambúrguer">
-      <h2>X-Burguer</h2>
-      <p>Pão brioche, carne, queijo, alface, tomate, molho especial.</p>
-      <span>R$ 24,90</span>
-    </div>
-<div class="item">
-      <img src="hamburguer.png" alt="Hambúrguer">
-      <h2>X-Burguer</h2>
-      <p>Pão brioche, carne, queijo, alface, tomate, molho especial.</p>
-      <span>R$ 24,90</span>
-    </div>
-<div class="item">
-      <img src="hamburguer.png" alt="Hambúrguer">
-      <h2>X-Burguer</h2>
-      <p>Pão brioche, carne, queijo, alface, tomate, molho especial.</p>
-      <span>R$ 24,90</span>
-    </div>
-<div class="item">
-      <img src="hamburguer.png" alt="Hambúrguer">
-      <h2>X-Burguer</h2>
-      <p>Pão brioche, carne, queijo, alface, tomate, molho especial.</p>
-      <span>R$ 24,90</span>
-    </div>
-<div class="item">
-      <img src="hamburguer.png" alt="Hambúrguer">
-      <h2>X-Burguer</h2>
-      <p>Pão brioche, carne, queijo, alface, tomate, molho especial.</p>
-      <span>R$ 24,90</span>
-    </div>
-<div class="item">
-      <img src="hamburguer.png" alt="Hambúrguer">
-      <h2>X-Burguer</h2>
-      <p>Pão brioche, carne, queijo, alface, tomate, molho especial.</p>
-      <span>R$ 24,90</span>
-    </div>
-<div class="item">
-      <img src="hamburguer.png" alt="Hambúrguer">
-      <h2>X-Burguer</h2>
-      <p>Pão brioche, carne, queijo, alface, tomate, molho especial.</p>
-      <span>R$ 24,90</span>
-    </div>
-<div class="item">
-      <img src="hamburguer.png" alt="Hambúrguer">
-      <h2>X-Burguer</h2>
-      <p>Pão brioche, carne, queijo, alface, tomate, molho especial.</p>
-      <span>R$ 24,90</span>
-    </div>
-<div class="item">
-      <img src="hamburguer.png" alt="Hambúrguer">
-      <h2>X-Burguer</h2>
-      <p>Pão brioche, carne, queijo, alface, tomate, molho especial.</p>
-      <span>R$ 24,90</span>
-    </div>
-<div class="item">
-      <img src="hamburguer.png" alt="Hambúrguer">
-      <h2>X-Burguer</h2>
-      <p>Pão brioche, carne, queijo, alface, tomate, molho especial.</p>
-      <span>R$ 24,90</span>
-    </div>
-<div class="item">
-      <img src="hamburguer.png" alt="Hambúrguer">
-      <h2>X-Burguer</h2>
-      <p>Pão brioche, carne, queijo, alface, tomate, molho especial.</p>
-      <span>R$ 24,90</span>
-    </div>
-<div class="item">
-      <img src="hamburguer.png" alt="Hambúrguer">
-      <h2>X-Burguer</h2>
-      <p>Pão brioche, carne, queijo, alface, tomate, molho especial.</p>
-      <span>R$ 24,90</span>
-    </div>
-<div class="item">
-      <img src="hamburguer.png" alt="Hambúrguer">
-      <h2>X-Burguer</h2>
-      <p>Pão brioche, carne, queijo, alface, tomate, molho especial.</p>
-      <span>R$ 24,90</span>
-    </div>
-<div class="item">
-      <img src="hamburguer.png" alt="Hambúrguer">
-      <h2>X-Burguer</h2>
-      <p>Pão brioche, carne, queijo, alface, tomate, molho especial.</p>
-      <span>R$ 24,90</span>
-    </div>
-<div class="item">
-      <img src="hamburguer.png" alt="Hambúrguer">
-      <h2>X-Burguer</h2>
-      <p>Pão brioche, carne, queijo, alface, tomate, molho especial.</p>
-      <span>R$ 24,90</span>
-    </div>
-    </section>
-
-    <section id="clones" class="tab grid-tab hidden">
-<div class="item">
-      <img src="hamburguer.png" alt="Clone">
-      <h2>Clone Duplo</h2>
-      <p>Compre 1 e leve 2 - Hambúrguer duplo com cheddar e maionese.</p>
-      <span>R$ 29,90</span>
-    </div>
-<div class="item">
-      <img src="hamburguer.png" alt="Clone">
-      <h2>Clone Duplo</h2>
-      <p>Compre 1 e leve 2 - Hambúrguer duplo com cheddar e maionese.</p>
-      <span>R$ 29,90</span>
-    </div>
-<div class="item">
-      <img src="hamburguer.png" alt="Clone">
-      <h2>Clone Duplo</h2>
-      <p>Compre 1 e leve 2 - Hambúrguer duplo com cheddar e maionese.</p>
-      <span>R$ 29,90</span>
-    </div>
-<div class="item">
-      <img src="hamburguer.png" alt="Clone">
-      <h2>Clone Duplo</h2>
-      <p>Compre 1 e leve 2 - Hambúrguer duplo com cheddar e maionese.</p>
-      <span>R$ 29,90</span>
-    </div>
-<div class="item">
-      <img src="hamburguer.png" alt="Clone">
-      <h2>Clone Duplo</h2>
-      <p>Compre 1 e leve 2 - Hambúrguer duplo com cheddar e maionese.</p>
-      <span>R$ 29,90</span>
-    </div>
-<div class="item">
-      <img src="hamburguer.png" alt="Clone">
-      <h2>Clone Duplo</h2>
-      <p>Compre 1 e leve 2 - Hambúrguer duplo com cheddar e maionese.</p>
-      <span>R$ 29,90</span>
-    </div>
-<div class="item">
-      <img src="hamburguer.png" alt="Clone">
-      <h2>Clone Duplo</h2>
-      <p>Compre 1 e leve 2 - Hambúrguer duplo com cheddar e maionese.</p>
-      <span>R$ 29,90</span>
-    </div>
-<div class="item">
-      <img src="hamburguer.png" alt="Clone">
-      <h2>Clone Duplo</h2>
-      <p>Compre 1 e leve 2 - Hambúrguer duplo com cheddar e maionese.</p>
-      <span>R$ 29,90</span>
-    </div>
-<div class="item">
-      <img src="hamburguer.png" alt="Clone">
-      <h2>Clone Duplo</h2>
-      <p>Compre 1 e leve 2 - Hambúrguer duplo com cheddar e maionese.</p>
-      <span>R$ 29,90</span>
-    </div>
-<div class="item">
-      <img src="hamburguer.png" alt="Clone">
-      <h2>Clone Duplo</h2>
-      <p>Compre 1 e leve 2 - Hambúrguer duplo com cheddar e maionese.</p>
-      <span>R$ 29,90</span>
-    </div>
-    </section>
-
-    <section id="bebidas" class="tab grid-tab hidden">
-<div class="item">
-      <img src="suco.png" alt="Suco">
-      <h2>Suco Natural</h2>
-      <p>Sabores diversos - 300ml</p>
-      <span>R$ 6,00</span>
-    </div>
-<div class="item">
-      <img src="suco.png" alt="Suco">
-      <h2>Suco Natural</h2>
-      <p>Sabores diversos - 300ml</p>
-      <span>R$ 6,00</span>
-    </div>
-<div class="item">
-      <img src="suco.png" alt="Suco">
-      <h2>Suco Natural</h2>
-      <p>Sabores diversos - 300ml</p>
-      <span>R$ 6,00</span>
-    </div>
-<div class="item">
-      <img src="suco.png" alt="Suco">
-      <h2>Suco Natural</h2>
-      <p>Sabores diversos - 300ml</p>
-      <span>R$ 6,00</span>
-    </div>
-<div class="item">
-      <img src="suco.png" alt="Suco">
-      <h2>Suco Natural</h2>
-      <p>Sabores diversos - 300ml</p>
-      <span>R$ 6,00</span>
-    </div>
-<div class="item">
-      <img src="refrigerante.png" alt="Refrigerante">
-      <h2>Refrigerante Lata</h2>
-      <p>Coca, Fanta, Guaraná, Pepsi - 350ml</p>
-      <span>R$ 5,00</span>
-    </div>
-<div class="item">
-      <img src="refrigerante.png" alt="Refrigerante">
-      <h2>Refrigerante Lata</h2>
-      <p>Coca, Fanta, Guaraná, Pepsi - 350ml</p>
-      <span>R$ 5,00</span>
-    </div>
-<div class="item">
-      <img src="refrigerante.png" alt="Refrigerante">
-      <h2>Refrigerante Lata</h2>
-      <p>Coca, Fanta, Guaraná, Pepsi - 350ml</p>
-      <span>R$ 5,00</span>
-    </div>
-<div class="item">
-      <img src="refrigerante.png" alt="Refrigerante">
-      <h2>Refrigerante Lata</h2>
-      <p>Coca, Fanta, Guaraná, Pepsi - 350ml</p>
-      <span>R$ 5,00</span>
-    </div>
-<div class="item">
-      <img src="refrigerante.png" alt="Refrigerante">
-      <h2>Refrigerante Lata</h2>
-      <p>Coca, Fanta, Guaraná, Pepsi - 350ml</p>
-      <span>R$ 5,00</span>
-    </div>
-    </section>
-
+    <section id="cardapio" class="tab grid-tab"></section>
+    <section id="clones" class="tab grid-tab hidden"></section>
+    <section id="bebidas" class="tab grid-tab hidden"></section>
   </div>
 
   <script src="script.js"></script>
